Fixes spacing and sizing issues for mobile portraits

--- a/style.css
+++ b/style.css
@@ -773,7 +773,7 @@ ul#filter li a {
 
 
  .mix {
-    padding-bottom: 8.3em;
+    padding-bottom: 46%;
     width: 46%;
     
     position: relative;
